The DMO and mmdevice/wasapi modules both call CoInitializeEx with incompatible threading modes, in the same thread. So it returns RPC_E_CHANGED_MODE, 0x80010106 "Cannot change thread mode after it is set".
DMO: use COINIT_MULTITHREADED instead of COINIT_APARTMENTTHREADEDFixes [#14202](https://code.videolan.org/videolan/vlc/-/issues/14202)All the other CoInitializeEx() calls and now using multithreading, except forthis code which is called in UpdateRects()See modules/video_output/msw/common.c l286Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>