DMO: use COINIT_MULTITHREADED instead of COINIT_APARTMENTTHREADED

Fixes #14202

All the other CoInitializeEx() calls and now using multithreading, except for
this code which is called in UpdateRects()
See modules/video_output/msw/common.c l286

Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>